package yanry.lib.java.model.log;

public interface LogFormatter {
    String format(LogRecord logRecord);
}
